# AwoogaPS3

./: CMakeLists.txt  README.md  awoogaPS3.cpp
Cell/: PowerProcessor.cpp  PowerProcessor.h
Common/: ByteOrdering.h  ByteSwap.h  Logger.cpp  Logger.h  Types.h
Crypto/: AES.c  AES.h  PkgDecryptor.cpp  PkgDecryptor.h
ELF/: elf32.h  elf64.h  elf_common.h  sce.h
Emulator/: AwoogaPS3.h
HLE/: HLE.cpp  HLE.h  ModuleSyscallList.h  PPUWrapper.h  Pointer.h
HLE/Modules/: cellFiber.cpp  cellGame.cpp  cellGameExec.cpp  cellGcmSys.cpp  cellNetctl.cpp  cellSpurs.cpp  cellSync.cpp  cellSysmodule.cpp  cellSysutil.cpp  sceNp.cpp  sceNp2.cpp  sceNpTus.cpp  sysPrxForUser.cpp  sys_fs.cpp  sys_net.cpp
HLE/Syscalls/: sys_dbg.cpp  sys_event.cpp  sys_memory.cpp  sys_ppu_thread.cpp  sys_spu.cpp  sys_time.cpp  sys_timer.cpp  sys_tty.cpp
Memory/: Memory.cpp  Memory.h
